--- a/showcase-components/package.json
+++ b/showcase-components/package.json
@@ -4,8 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "node ./webpack/dev.js",
-    "start": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "release": "youzanyun save"
+    "build": "node ./webpack/build.js"
   },
   "author": "youzanyun",
   "license": "ISC",
@@ -21,6 +20,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.12.2",
     "chalk": "^2.4.2",
+    "chokidar": "^3.3.0",
     "css-loader": "^1.0.1",
     "eslint": "^6.5.1",
     "esprima": "^4.0.1",
@@ -34,7 +34,6 @@
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "progress-bar-webpack-plugin": "^1.12.1",
-    "qiniu": "^7.2.1",
     "read-chunk": "^3.2.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
