--- a/showcase-editor/package.json
+++ b/showcase-editor/package.json
@@ -25,6 +25,7 @@
     "glob": "^7.1.3",
     "glob-watcher": "^5.0.3",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.9.3",
     "postcss-easy-import": "^3.0.0",
@@ -62,8 +63,5 @@
     "type": "git",
     "url": ""
   },
-  "author": "youzan",
-  "dependencies": {
-    "lodash": "^4.17.10"
-  }
+  "author": "youzan"
 }
